@@ -1,6 +1,6 @@
 Package: formattable
 Title: Formattable Data Structures
-Version: 0.1.9.9010
+Version: 0.1.9.9100
 Authors@R: c(
     person("Kun", "Ren", role = c("aut", "cre"), email = "ken@renkun.me"),
     person("Kenton", "Russell", role = "aut", email = "kent.russell@timelyportfolio.com")
@@ -12,7 +12,7 @@ Description: Provides functions to create formattable vectors and data frames.
     web pages.
 Depends:
     R (> 3.0.2)
-Date: 2016-06-10
+Date: 2016-06-13
 Imports:
     methods,
     htmltools,
@@ -27,5 +27,5 @@ BugReports: https://github.com/renkun-ken/formattable/issues
 Roxygen: list(wrap = FALSE)
 ByteCompile: TRUE
 Suggests:
-    testthat
+    testthat, DT
 RoxygenNote: 5.0.1
