@@ -16,6 +16,7 @@ S3method(accounting,default)
 S3method(all,formattable)
 S3method(any,formattable)
 S3method(as.character,formattable)
+S3method(as.datatable,formattable)
 S3method(as.htmlwidget,formattable)
 S3method(as.list,formattable)
 S3method(c,formattable)
@@ -55,6 +56,7 @@ S3method(sum,formattable)
 S3method(unique,formattable)
 export(accounting)
 export(area)
+export(as.datatable)
 export(as.htmlwidget)
 export(color_bar)
 export(color_text)
